# AED-Proyect-R-tree

./: .gitignore  CMakeLists.txt  README.md
src/gestor_datos/: README.md  dataset_manager.cpp  dataset_manager.h  main_metrics.cpp
src/gui/: GuiApp.cpp  GuiApp.h  main_gui.cpp
src/rtree/: mbr.h  node.h  rtree.h  spatial_object.h
